Fix device_installer and fsck issues.

--- a/clonezilla/savedisk/isolinux.cfg
+++ b/clonezilla/savedisk/isolinux.cfg
@@ -35,7 +35,7 @@ label Clonezilla live
   # MENU LABEL Clonezilla live (Default settings, VGA 800x600)
   # MENU PASSWD
   kernel /live/vmlinuz
-  append initrd=/live/initrd.img boot=live union=overlay username=user hostname=artful config quiet components noswap edd=on nomodeset noeject locales=fr_FR.UTF-8 keyboard-layouts=fr ocs_live_run="ocs-sr -q2 -j2 -batch -gm -gmf -z5p -i 4096000000 -fsck -p poweroff savedisk image sda" ocs_live_extra_param="" ocs_live_batch="yes" vga=788 ip= nosplash i915.blacklist=yes radeonhd.blacklist=yes nouveau.blacklist=yes vmwgfx.enable_fbdev=1
+  append initrd=/live/initrd.img boot=live union=overlay username=user hostname=artful config quiet components noswap edd=on nomodeset noeject locales=fr_FR.UTF-8 keyboard-layouts=fr ocs_live_run="ocs-sr -w 0 -v -noabo -q2 -j2 -batch -gm -gmf -z5p -i 4096000000 -fsck-y -p poweroff savedisk image sda" ocs_live_extra_param="" ocs_live_batch="yes" vga=788 ip= nosplash i915.blacklist=yes radeonhd.blacklist=yes nouveau.blacklist=yes vmwgfx.enable_fbdev=1
   TEXT HELP
   * Clonezilla live version: 20180119-artful-amd64. (C) 2003-2018, NCHC, Taiwan
   * Disclaimer: Clonezilla comes with ABSOLUTELY NO WARRANTY
