--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-# This is a basic workflow to help you get started with Actions
 
 name: Gentoo.mkg.builder
 
@@ -25,7 +24,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: update 
-        run: apt install libguestfs-tools mksquashfs curl findmnt mkisofs cdrecord util-linux  \
+        run: sudo apt install libguestfs-tools mksquashfs curl findmnt mkisofs cdrecord util-linux  \
              rsync uuid xorriso virtualbox virtualbox-additions xz-utils 
 
       # Runs a set of commands using the runners shell
