--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: update 
-        run: sudo apt install libguestfs-tools mksquashfs curl findmnt mkisofs cdrecord util-linux  \
+        run: sudo apt install libguestfs-tools squashfs-tools curl mkisofs cdrecord util-linux  \
              rsync uuid xorriso virtualbox virtualbox-additions xz-utils 
 
       # Runs a set of commands using the runners shell
