--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: update 
         run: sudo apt install libguestfs-tools squashfs-tools curl mkisofs cdrecord util-linux  \
-             rsync uuid xorriso virtualbox virtualbox-additions xz-utils 
+             uuid xorriso virtualbox virtualbox-guest-additions-iso virtualbox-ext-pack xz-utils 
 
       # Runs a set of commands using the runners shell
       - name: run
