--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: update 
-        run: sudo apt install libguestfs-tools squashfs-tools curl mkisofs cdrecord util-linux  
+        run: |
+             sudo apt update 
+             sudo apt install libguestfs-tools squashfs-tools curl mkisofs cdrecord util-linux  
              uuid xorriso virtualbox virtualbox-guest-additions-iso virtualbox-ext-pack xz-utils 
 
       # Runs a set of commands using the runners shell
