--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,9 @@ jobs:
       - name: update 
         run: |
              sudo apt update 
-             sudo apt install libguestfs-tools squashfs-tools curl mkisofs cdrecord util-linux  
-             uuid xorriso virtualbox virtualbox-guest-additions-iso virtualbox-ext-pack xz-utils 
+             sudo apt install uuid
+             sudo apt install libguestfs-tools squashfs-tools curl mkisofs cdrecord util-linux xorriso xz-utils
+             sudo apt install virtualbox virtualbox-guest-additions-iso virtualbox-ext-pack  
 
       # Runs a set of commands using the runners shell
       - name: run
