--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,19 +53,17 @@ jobs:
             -m "This release was automatically created by the Git Actions workflow corresponding to directory .github in the repository." \
             -m "The output are the references of the latest stage3 archive and minimal Gentoo install ISO that were tested OK for portage dependencies." \
             -m "File **downloaded.iso** is the custom MKG install ISO built from these references, to be used in a VirtualBox machine." \
-            -m "To create an updated Gentoo distribution, start a machine with the following specifications:" \
-            -m "  - Gentoo Linux x86_64 machine" \             
+            -m "To create an updated Gentoo distribution, start a a Gentoo 64-bit machine with the following specifications:" \
             -m "  - 8GB or virtual RAM" \
             -m "  - a new VDI SATA disk of at least 55 GB" \
             -m "  - downloaded.iso as an attached IDE optical disk as live CD" \
             -m "  - non-EFI bootloader." \
             -m "Once the build is completed, the VM will shut down automatically." \
             -m "You can then clone the VDI disk into a functional Gentoo block device /dev/sdX using **guestfish**, **qemu** or:" \
-            -m "     #  ./mkg from_vm vm='name of your VB machine' hot_install ext_device=sdX" \
+            -m "     #  ./mkg from_vm vm=name_of_your_VB_machine hot_install ext_device=sdX" \
             -m "Alternatively, you can create an install ISO and a CloneZilla installer medium /dev/sdX by running:" \
-            -m "     # ./mkg from_vm vm='name of your VB machine' device_installer ext_device=sdX gentoo.iso"  \
-            -m "You can also perform this step manually by starting another VB machine with the following specifications:" \
-            -m "  - Gentoo Linux x86_64 machine" \
+            -m "     # ./mkg from_vm vm=name_of_your_VB_machine device_installer ext_device=sdX gentoo.iso"  \
+            -m "You can also perform this step manually by starting another Gentoo 64-bit machine with the following specifications:" \
             -m "  - 4 GB of virtual RAM" \
             -m "  - the VDI disk already used in the above procedure attached as a SATA device" \
             -m "  - **clonezilla_with_virtualbox.iso** downloaded from the companion Github project [clonezila_with_virtualbox](https://github.com/fabnicol/clonezilla_with_virtualbox/releases) and attached as an IDE device as live CD" \
