--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       
       - name: run
         run: |
-          sudo ./mkg test_only cleanup=false
+          sudo ./mkg test_only cleanup=false use_mkg_workflow=false
 
       - uses: dev-drprasad/delete-tag-and-release@v0.2.0
         with:
