--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,5 +86,5 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
-          repository: my-org/my-repo/my-image
+          repository: fabnicol/mkg/mkg-${GITHUB_REF##*/}
           tag_with_ref: true
