--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -1,7 +1,6 @@
 name: Publish Docker image
 on:
-  release: release-gnome 
-    types: [published]
+  release: 
 jobs:
   push_to_registry:
     name: Push Docker image to GitHub Packages
