--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -16,5 +16,5 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
-          repository: fabnicol/mkg/mkg-${GITHUB_REF##*/}
+          repository: fabnicol/mkg/release-master
           tag_with_ref: true
