--- a/.github/workflows/main_cpus_1.yml
+++ b/.github/workflows/main_cpus_1.yml
@@ -55,6 +55,7 @@ jobs:
             -m "File **downloaded.iso** is the custom MKG install ISO built from these references, to be used in a VirtualBox machine." \
             -m "To create an updated Gentoo distribution, start a Gentoo 64-bit machine with the following specifications:" \
             -m "  - 8GB of virtual RAM" \
+            -m "  - 1 CPU core" \
             -m "  - a new VDI SATA disk of at least 55 GB" \
             -m "  - downloaded.iso as an attached IDE optical disk as live CD" \
             -m "  - non-EFI bootloader." \
