--- a/.github/workflows/main_cpus_4.yml
+++ b/.github/workflows/main_cpus_4.yml
@@ -44,10 +44,11 @@ jobs:
         run: |
             set -x
             assets=()
-            for asset in checksums.txt latest-install-amd64-minimal.txt latest-stage3-amd64.txt downloaded.iso; do
+            for asset in checksums.txt latest-install-amd64-minimal.txt latest-stage3-amd64.txt downloaded.iso
+            do
             assets+=("-a" "$asset")
             done
-            tag_name="release-gnome-4"
+            tag_name=release-gnome-4
             hub release create  "${assets[@]}" \
             -m "Release $tag_name" \
             -m "This release was automatically created by the Git Actions workflow corresponding to directory .github in the repository." \
