--- a/.github/workflows/main_cpus_2.yml
+++ b/.github/workflows/main_cpus_2.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
             set -x
             assets=()
-            for asset in checksums.txt latest-install-amd64-minimal.txt latest-stage3-amd64.txt downloaded.iso; do
+            for asset in checksums.txt latest-install-amd64-minimal.txt latest-stage3-amd64-openrc.txt downloaded.iso; do
             assets+=("-a" "$asset")
             done
             tag_name="release-gnome-2"
