Add systemd support and fix ext_device=vendor

--- a/.config
+++ b/.config
@@ -10895,7 +10895,7 @@ CONFIG_GENTOO_LINUX_PORTAGE=y
 # Support for init systems, system and service managers
 #
 CONFIG_GENTOO_LINUX_INIT_SCRIPT=y
-# CONFIG_GENTOO_LINUX_INIT_SYSTEMD is not set
+CONFIG_GENTOO_LINUX_INIT_SYSTEMD=y
 # end of Support for init systems, system and service managers
 
 #
