--- a/.github/workflows/main_cpus_4.yml
+++ b/.github/workflows/main_cpus_4.yml
@@ -1,14 +1,16 @@
-name: Gentoo.mkg.builder.3
+name: mkg_builder_4_gnome
 
 on:
   push:
     branches: 
-    - gnome
+    - gnome 
+    
   pull_request:
     branches: 
-    - gnome
+    - gnome 
+    
   schedule:
-    - cron: "0 2 * * 1-6"
+  - cron: "0 2 * * 1-5"
   
   workflow_dispatch:
 
