Fixed retirement of hardened-sources ebuild from portage tree

--- a/.config
+++ b/.config
@@ -2582,7 +2582,7 @@ CONFIG_SRAM=y
 # CONFIG_PCI_ENDPOINT_TEST is not set
 CONFIG_XILINX_SDFEC=m
 CONFIG_MISC_RTSX=m
-CONFIG_PVPANIC=m
+# CONFIG_PVPANIC is not set
 CONFIG_C2PORT=m
 CONFIG_C2PORT_DURAMAR_2150=m
 
@@ -9878,7 +9878,7 @@ CONFIG_LOCKD=m
 CONFIG_LOCKD_V4=y
 CONFIG_NFS_ACL_SUPPORT=m
 CONFIG_NFS_COMMON=y
-CONFIG_NFS_V4_2_SSC_HELPER=m
+CONFIG_NFS_V4_2_SSC_HELPER=y
 CONFIG_SUNRPC=m
 CONFIG_SUNRPC_GSS=m
 CONFIG_SUNRPC_BACKCHANNEL=y
