--- a/.github/workflows/main_cpus_1.yml
+++ b/.github/workflows/main_cpus_1.yml
@@ -27,7 +27,7 @@ jobs:
              sudo apt update 
              sudo apt install uuid dos2unix libarchive-tools
              sudo apt install squashfs-tools curl mkisofs cdrecord util-linux xorriso xz-utils
-             sudo apt install virtualbox    
+             sudo apt install virtualbox  hub  
       
       - name: run
         run: |
